# mermaid-mermaid-mermaid

./: .gitignore  README.md  THIRD_PARTY_THEMES.md  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: UI系统与组件清单.md  ai-bridge.mmd  demo-showcase.mmd  document-model.mmd  interaction-design.md  interaction-pipeline.mmd  mermaid设计.mmd  performance-design.md  performance-flow.mmd  runtime-file-assets.mmd  technical-constraints.md  theme-system.mmd  theme-tokens.md  主题令牌清单.md  主题系统.mmd  交互管线.mmd  交互设计约束.md  性能设计.md  性能路径.mmd  技术约束.md  技术选型与库使用.md  文档模型.mmd  智能体桥接.mmd  演示图谱.mmd  系统总览.mmd  运行时文件与资源.mmd
electron/: ai-bridge.cjs  atomic-json-file.cjs  document-files.cjs  document-files.test.ts  editor-sessions.cjs  editor-sessions.test.ts  embedded-browser-titlebar-hot-zone.cjs  embedded-browser-titlebar-hot-zone.test.ts  embedded-browser-url.cjs  embedded-browser-url.test.ts  image-assets.cjs  image-size.cjs  link-preview.cjs  main.cjs  markdown-fold-store.cjs  markdown-fold-store.test.ts  pi-agent-ipc.cjs  pi-agent-manager.cjs  pi-agent-models.mjs  pi-agent-models.test.ts  pi-agent-preload.cjs  pi-agent-worker.mjs  pi-model-config.mjs  pi-model-config.test.ts  preload.cjs  project-csv.cjs  project-documents.cjs  project-file-watcher.cjs  project-file-watcher.test.ts  project-preload.cjs  project-workspace.cjs  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: link_preview.rs  main.rs  project_workspace.rs
(+1129 files in other folders)
