[package]
name = "mermaid-canvas-editor"
version = "0.1.0"
description = "Mermaid Canvas Editor"
authors = ["Mermaid Canvas Editor"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.9.0"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.2", features = ["protocol-asset"] }
tauri-plugin-single-instance = "2.4.2"
tiny_http = "0.12"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
